<resources>
    <string name="app_name">"App Portfolio "</string>
    <string name="capstone_my_own_app">Capstone : My own app</string>
    <string name="go_ubiquitous">Go ubiquitous</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
</resources>
