<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vimalvimiroxy.appportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewHead"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/my_nanodegree_apps"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/buttonPopularMovies"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickToast"
            android:text="@string/popular_movies"/>

        <Button
            android:id="@+id/buttonStockHawk"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickToast"
            android:text="@string/stock_hawk"/>

        <Button
            android:id="@+id/buttonBuildItBigger"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickToast"
            android:text="@string/build_it_bigger"/>

        <Button
            android:id="@+id/buttonMakeYourAppMaterial"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickToast"
            android:text="@string/make_your_app_material"/>

        <Button
            android:id="@+id/buttonGoUbiquitous"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickToast"
            android:text="@string/go_ubiquitous"/>

        <Button
            android:id="@+id/buttonCapstone"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:onClick="onClickToast"
            android:text="@string/capstone_my_own_app"/>
    </LinearLayout>
</ScrollView>